--- a/Module 0/Self Assessments/Module 0 Self Assessment.ipynb
+++ b/Module 0/Self Assessments/Module 0 Self Assessment.ipynb
@@ -81,19 +81,36 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 12,
       "id": "de963b04",
       "metadata": {
-        "id": "de963b04"
+        "id": "de963b04",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "7fdecf07-69a6-427a-c727-f98964603578"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "B\n"
+          ]
+        }
+      ],
       "source": [
         "def convert_score_to_letter(course_score):\n",
         "    ###\n",
         "    ### YOUR CODE HERE\n",
         "    ###\n",
-        "\n",
-        "  return print(type(course_score))\n",
+        "  course_score = int(course_score)\n",
+        "  val = lambda course_score: 'A' if course_score >= 90 else \\\n",
+        "  'B' if course_score >= 80 else \\\n",
+        "  'C' if course_score >= 70 else \\\n",
+        "  'D' if course_score >= 60 else \\\n",
+        "  'F'\n",
+        "  return val(course_score)\n",
         "\n",
         "print(convert_score_to_letter(demo_course_score))"
       ]
